--- a/platformio.ini
+++ b/platformio.ini
@@ -17,19 +17,27 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
+[library]
+name = shell
+
 [platformio]
 default_envs = 
-  ; uno
-  ; mega2560
-  ; d1_mini
-  ; nodemcu
-   esp32doit-devkit-v1
-
+  native
+  uno
+  mega2560
+;  nodemcu
+  esp32doit-devkit-v1
+  
+include_dir = lib\${library.name}\src   ; needed as a workaround for native unit test (otherwise the include files of the library are not found)
+lib_dir = lib\${library.name}       ; needed as a workaround for native unit test (odherwise the library souce code is not linked) 
 
 [env]
 build_flags = 
-  -Wall
-  
+  -Wall -Werror -pedantic -std=gnu++17 -D__LIBRARY_NAME__=\"${library.name}\"
+build_unflags = 
+  -std=gnu++11  
+monitor_speed = 
+  115200  
 
 [common]
 lib_deps_builtin =
@@ -37,35 +45,30 @@ lib_deps_builtin =
   ; Wire
 
 lib_deps_external =
-  ; https://github.com/steftri/shell#1.0.0
+  ; https://github.com/steftri/bareFifo#1.0.0
 
 
+[env:native]
+platform = native
 
 [env:uno]
 platform = atmelavr
 board = uno
 framework = arduino
 
-
 [env:mega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
 
-
 [env:nodemcu]
 platform = espressif8266
-framework = arduino
 board = nodemcuv2
-
-
-[env:d1_mini]
-platform = espressif8266
 framework = arduino
-board = d1_mini
-
+build_unflags = ${env.build_unflags} -pedantic ; -pedantic does not work because of the framework
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
-framework = arduino
+platform = espressif32@6.3.1
 board = esp32doit-devkit-v1
+framework = arduino
+build_unflags = ${env.build_unflags} -pedantic ; -pedantic does not work because of the framework
